--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,23 +1,3 @@
 steps:
-  - label: run bats tests
-    plugins:
-      - plugin-tester#v1.1.1: ~
-
-  - label: run shellcheck
-    plugins:
-      - shellcheck#v1.3.0:
-          files:
-            - hooks/*
-            - buildkite/*.sh
-
-  - label: ":sparkles: lint"
-    plugins:
-      - plugin-linter#v3.3.0:
-          id: shellcheck
-
-  - label: selftest
-    plugins:
-      - shellcheck#${BUILDKITE_COMMIT}:
-          files:
-            - hooks/*
-            - buildkite/*.sh
+  - label: "generate :pipeline:"
+    command: .buildkite/pipeline.sh
