--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,3 +1,33 @@
 steps:
-  - label: "generate :pipeline:"
-    command: .buildkite/pipeline.sh
+  - label: run bats tests
+    plugins:
+      - plugin-tester#v1.1.1: ~
+
+  - label: run shellcheck
+    plugins:
+      - shellcheck#v1.3.0:
+          files:
+            - hooks/*
+            - buildkite/*.sh
+
+  - label: ":sparkles: lint"
+    plugins:
+      - plugin-linter#v3.3.0:
+          id: shellcheck
+
+  - label: selftest - fork
+    plugins:
+      - $BUILDKITE_PULL_REQUEST_REPO#${BUILDKITE_COMMIT}:
+          files:
+            - hooks/*
+            - buildkite/*.sh
+    if: build.pull_request.repository.fork == true
+
+  - label: selftest
+    plugins:
+      - shellcheck#${BUILDKITE_COMMIT}:
+          files:
+            - hooks/*
+            - buildkite/*.sh
+    if: build.pull_request.repository.fork == false
+    
